# Emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multiplatform.yml
emulator/: CMakeLists.txt  emulator.h  frontend.h  utils.h
emulator/components/: CMakeLists.txt  bus.cpp  bus.h  component.h  cpu.h  display.h  input.h  memory.h  multimappedmemory.h  system.h  timer.h
emulator/components/exceptions/: AddressInUse.h  InvalidAddress.h  MemoryNoImplementation.h  MemoryReadOnly.h
emulator/components/tests/: bus_test.cpp  multimappedmemory_test.cpp
emulator/core/: CMakeLists.txt  emumanager.cpp  emumanager.h  main.cpp
emulator/debugger/: CMakeLists.txt  debugger.cpp  debugger.h  gdbserver.cpp  gdbserver.h  sysdebugger.h
emulator/debugger/socket/: client.cpp  client.h  server.cpp  server.h  socket_internal.cpp  socket_internal.h
emulator/frontends/: CMakeLists.txt
emulator/frontends/ImGUIOpenGL/: CMakeLists.txt  frontend.cpp  frontend.h  frontend_init.cpp
emulator/frontends/filedialog/: filedialog.h  filedialog_macos.cpp  filedialog_macos.mm  filedialog_nix.cpp  filedialog_win.cpp
emulator/systems/: CMakeLists.txt
emulator/systems/chip8/: CMakeLists.txt  chip8.cpp  cpu.cpp  cpu.h
emulator/systems/chip8/tests/: system_test.cpp
emulator/systems/gameboy/: CMakeLists.txt  TODO  boot_data.h  cpu.cpp  cpu.h  cpu_decode.cpp  debugger.h  gameboy.cpp  names.h  ppu.cpp  ppu.h
emulator/systems/gameboy/tests/: cpu_decode_test.cpp
emulators/: CMakeLists.txt  emulator.h  utils.h
emulators/components/: CMakeLists.txt  bus.cpp  bus.h  component.h  cpu.h  memory.h  multimappedmemory.h  system.h
emulators/components/exceptions/: AddressInUse.h  InvalidAddress.h
emulators/components/tests/: bus_test.cpp  memory_test.cpp  multimappedmemory_test.cpp
emulators/core/: CMakeLists.txt  emumanager.cpp  emumanager.h  loader.cpp  loader.h  main.cpp
emulators/debugger/: CMakeLists.txt  debugger.cpp  gdbserver.cpp  gdbserver.h  sysdebugger.h
emulators/debugger/socket/: client.cpp  server.cpp  server.h  socket_internal.cpp
emulators/gameboy/: CMakeLists.txt  TODO  cpu.cpp  cpu.h  cpu_decode.cpp  debugger.h  gameboy.cpp
emulators/gameboy/tests/: cpu_decode_test.cpp  cpu_test.cpp  system_test.cpp
emulators/z80/: CMakeLists.txt  z80.cpp
